--- a/fin.html
+++ b/fin.html
@@ -143,7 +143,7 @@
         if (hour >= 5 && hour < 12) {
             greetingElement.textContent = 'Good Morning';
         } else if (hour >= 12 && hour < 16) {
-            greetingElement.textContent = 'Good Evening';
+            greetingElement.textContent = 'Good Afternoon';
         } else if (hour >= 16 && hour < 20) {
             greetingElement.textContent = 'Good Evening';
         } else {
