--- a/fin.html
+++ b/fin.html
@@ -141,12 +141,6 @@
             margin-bottom: 40px;
             width: 820px;
             max-width: 90vw;
-            animation: dashboardFadeIn 1.2s cubic-bezier(.68,-0.55,.27,1.55);
-        }
-
-        @keyframes dashboardFadeIn {
-            from { opacity: 0; transform: translateY(40px); }
-            to { opacity: 1; transform: translateY(0); }
         }
 
         .stat-card {
@@ -161,12 +155,12 @@
             min-height: 120px;
             position: relative;
             overflow: hidden;
-            animation: statCardPop 0.8s cubic-bezier(.68,-0.55,.27,1.55);
+            transition: transform 0.35s cubic-bezier(.68,-0.55,.27,1.55), box-shadow 0.2s;
         }
 
-        @keyframes statCardPop {
-            from { opacity: 0; transform: scale(0.8); }
-            to { opacity: 1; transform: scale(1); }
+        .stat-card:hover {
+            transform: translateY(-18px) scale(1.08) rotate(-2deg);
+            box-shadow: 0 12px 36px rgba(44,47,51,0.18);
         }
 
         .stat-title {
@@ -209,25 +203,12 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            transition: transform 0.3s cubic-bezier(.68,-0.55,.27,1.55), box-shadow 0.2s;
-            animation: fabFloat 2.5s infinite alternate cubic-bezier(.68,-0.55,.27,1.55);
+            transition: transform 0.35s cubic-bezier(.68,-0.55,.27,1.55), box-shadow 0.2s;
         }
 
         .fab:hover {
-            transform: scale(1.12) rotate(-8deg);
-            box-shadow: 0 8px 32px rgba(44,47,51,0.22);
-        }
-
-        .fab-1 { animation-delay: 0s; }
-        .fab-2 { animation-delay: 0.5s; }
-        .fab-3 { animation-delay: 1s; }
-        .fab-4 { animation-delay: 1.5s; }
-        .fab-5 { animation-delay: 2s; }
-        .fab-6 { animation-delay: 2.5s; }
-
-        @keyframes fabFloat {
-            0% { transform: translateY(0) scale(1); }
-            100% { transform: translateY(-18px) scale(1.08); }
+            transform: translateY(-18px) scale(1.12) rotate(-8deg);
+            box-shadow: 0 16px 48px rgba(44,47,51,0.22);
         }
 
         /* Responsive */
@@ -378,7 +359,7 @@
 
         // --- Floating Action Buttons: Animate on click ---
         const fabs = document.querySelectorAll('.fab');
-        fabs.forEach((fab, idx) => {
+        fabs.forEach((fab) => {
             fab.addEventListener('click', () => {
                 fab.animate([
                     { transform: 'scale(1) rotate(0deg)' },
