--- a/fin.html
+++ b/fin.html
@@ -2,225 +2,7 @@
 <html>
 <head>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Roboto', Arial, sans-serif;
-            background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
-            margin: 0;
-            padding: 0;
-            height: 100vh;
-            display: flex;
-        }
-
-        .sidebar {
-            background: #2c2f33;
-            width: 200px;
-            transition: width 0.3s ease;
-            overflow: hidden;
-            position: relative;
-            color: white;
-            display: flex;
-            flex-direction: column;
-            box-shadow: 2px 0 16px rgba(44,47,51,0.08);
-            z-index: 2;
-        }
-
-        .sidebar.collapsed {
-            width: 40px;
-        }
-
-        .toggle-btn {
-            background-color: transparent;
-            color: white;
-            border: none;
-            cursor: pointer;
-            font-size: 18px;
-            padding: 10px;
-            text-align: left;
-            width: 100%;
-            transition: background 0.2s;
-        }
-
-        .toggle-btn:hover {
-            background: rgba(255,255,255,0.08);
-        }
-
-        .menu-title {
-            font-family: 'Montserrat', sans-serif;
-            font-weight: bold;
-            padding: 10px;
-            font-size: 18px;
-            letter-spacing: 1px;
-        }
-
-        .menu {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-        }
-
-        .menu-item {
-            padding: 10px;
-            cursor: pointer;
-            display: flex;
-            align-items: center;
-            transition: background 0.3s, transform 0.2s;
-            border-radius: 6px;
-        }
-
-        .menu-item:hover {
-            background-color: rgba(255, 255, 255, 0.13);
-            transform: scale(1.04);
-        }
-
-        .arrow {
-            margin-right: 10px;
-        }
-
-        .submenu {
-            list-style: none;
-            padding-left: 20px;
-            display: none;
-        }
-
-        .submenu.open {
-            display: block;
-        }
-
-        .greeting-container {
-            text-align: right;
-            margin: 40px 20px 0 0;
-            line-height: 1.5;
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            align-items: flex-end;
-        }
-
-        .greeting {
-            font-family: 'Montserrat', sans-serif;
-            font-size: 2.5em;
-            font-weight: bold;
-            color: #333;
-            letter-spacing: 1px;
-        }
-
-        .name {
-            font-size: 1.5em;
-            color: #555;
-        }
-
-        .label {
-            color: white;
-        }
-
-        /* Dashboard styles */
-        .dashboard-container {
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: flex-start;
-            margin-top: 40px;
-            z-index: 1;
-        }
-
-        .dashboard-title {
-            font-family: 'Montserrat', sans-serif;
-            font-size: 2em;
-            font-weight: 700;
-            color: #2c2f33;
-            margin-bottom: 18px;
-            letter-spacing: 1px;
-        }
-
-        .dashboard {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 32px;
-            margin-bottom: 40px;
-            width: 820px;
-            max-width: 90vw;
-        }
-
-        .stat-card {
-            background: linear-gradient(120deg, #7289da 0%, #99aab5 100%);
-            border-radius: 18px;
-            box-shadow: 0 4px 24px rgba(44,47,51,0.10);
-            padding: 32px 24px 24px 24px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            min-width: 200px;
-            min-height: 120px;
-            position: relative;
-            overflow: hidden;
-            transition: transform 0.35s cubic-bezier(.68,-0.55,.27,1.55), box-shadow 0.2s;
-        }
-
-        .stat-card:hover {
-            transform: translateY(-18px) scale(1.08) rotate(-2deg);
-            box-shadow: 0 12px 36px rgba(44,47,51,0.18);
-        }
-
-        .stat-title {
-            font-family: 'Montserrat', sans-serif;
-            font-size: 1.1em;
-            color: #fff;
-            margin-bottom: 10px;
-            letter-spacing: 0.5px;
-        }
-
-        .stat-value {
-            font-size: 2.2em;
-            font-weight: 700;
-            color: #fff;
-            letter-spacing: 1px;
-            text-shadow: 0 2px 8px rgba(44,47,51,0.10);
-        }
-
-        /* Animated floating action buttons */
-        .fab-container {
-            position: absolute;
-            right: 60px;
-            bottom: 60px;
-            display: flex;
-            flex-direction: column;
-            gap: 24px;
-            z-index: 10;
-        }
-
-        .fab {
-            background: linear-gradient(90deg, #2c2f33 60%, #7289da 100%);
-            color: #fff;
-            border: none;
-            border-radius: 50%;
-            width: 64px;
-            height: 64px;
-            font-size: 2em;
-            box-shadow: 0 4px 16px rgba(44,47,51,0.18);
-            cursor: pointer;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            transition: transform 0.35s cubic-bezier(.68,-0.55,.27,1.55), box-shadow 0.2s;
-        }
-
-        .fab:hover {
-            transform: translateY(-18px) scale(1.12) rotate(-8deg);
-            box-shadow: 0 16px 48px rgba(44,47,51,0.22);
-        }
-
-        /* Responsive */
-        @media (max-width: 1100px) {
-            .dashboard { width: 98vw; grid-template-columns: 1fr 1fr; }
-        }
-
-        @media (max-width: 700px) {
-            .dashboard { grid-template-columns: 1fr; width: 98vw; }
-            .dashboard-container { margin-top: 10px; }
-        }
-    </style>
+    <link rel="stylesheet" href="fin.css">
 </head>
 <body>
     <div class="sidebar" id="sidebar">
