--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FinDBMS React App</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="fin.css">
+    <link rel="stylesheet" href="/src/fin.css">
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="index.jsx"></script>
+    <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
